# siwir_ex04

./: CMakeLists.txt  Makefile  README.md  cmake_install.cmake  heat  include_GCC.mk  include_MPI.mk  pbs.sh  solution.pvd  solution_0  solution_1  solution_10  solution_100  solution_101  solution_102  solution_103  solution_104  solution_105  solution_106  solution_107  solution_108  solution_109  solution_11  solution_110  solution_111  solution_112  solution_113  solution_114  solution_115  solution_116  solution_117  solution_118  solution_119  solution_12  solution_120  solution_121  solution_122  solution_123  solution_124  solution_125  (+169 more)
MPI/: Array.d  CGSolver.d  CGSolver3.d  Debug.d  HeatSolver.d  main.d
src/: Array.cc  Array.hh  CGSolver.cc  CGSolver.hh  HeatSolver.cc  HeatSolver.hh  main.cc
